<resources>
    <string name="mobile_ads_key">ca-app-pub-2795137944661137~5487270836</string>
    <string name="ads_full_screen" translatable="false" >ca-app-pub-2795137944661137/6725288745</string>
    <string name="ads_banner" translatable="false" >ca-app-pub-2795137944661137/6014842309</string>
    <string name="app_name">Hitjabi</string>
    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
    <string name="saved">Saved</string>
    <string name="ok">Ok</string>
    <string name="close">close</string>
    <string name="saving_fail">Saving fail</string>
    <string name="folder_name">Hitjabi</string>
    <string name="photo_saved">Photo saved</string>
    <string name="save_image_question">Save image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="processing">Processing…</string>

    <string name="message_about_update">We are still working on 3D filters to provide a service that suits your privilege. Please enjoy resizing your hijab at the moment until next update. Thank you.</string>
    <string name="do_not_show_msg">Do not show this message again.</string>

    <!--Permissions-->
    <string name="no_permissions">No permissions</string>
    <string name="enable_permission">Please, enable %1$s permission in app settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>

    <!--Gallery activity-->
    <string name="gallery_title">Hitjabi\'s album</string>
    <string name="not_found">Not found</string>

    <!-- Social-->
    <string name="messenger">Messenger</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="more">More</string>

    <string name="messenger_package">com.facebook.orca</string>
    <string name="instagram_package">com.instagram.android</string>
    <string name="facebook_package">com.facebook.katana</string>
    <string name="whatsapp_package">com.whatsapp</string>

    <!--Filters -->
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>

    <string name="filter_normal">Normal</string>
</resources>
